--- a/Trains App/trains/pom.xml
+++ b/Trains App/trains/pom.xml
@@ -64,6 +64,16 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.8.Final</version>
 		</dependency>
+		<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-api</artifactId>
+    <!-- <version>2.11.0</version> -->
+</dependency>
+<dependency>
+    <groupId>org.apache.logging.log4j</groupId>
+    <artifactId>log4j-core</artifactId>
+  <!--   <version>2.11.0</version> -->
+</dependency>
 	</dependencies>
 
 	<build>
