--- a/Invoice App/invoice/pom.xml
+++ b/Invoice App/invoice/pom.xml
@@ -64,6 +64,10 @@
 			<artifactId>hibernate-validator</artifactId>
 			<version>6.0.8.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
